socket.io client javascript url changed

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="app" name="yrLab"></div>
-  <script src="//cdn.socket.io/socket.io.js"></script>
+  <script src="//cdn.socket.io/socket.io-2.2.0.js"></script>
   <script src="/js/index.js"></script>
 </body>
 </html>
