--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div id="app" name="yrLab"></div>
+  <script src="/socket.io/socket.io.js"></script>
   <script src="/js/index.js"></script>
 </body>
 </html>
